<resources>
    <string name="app_name">project</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="continuar">Continuar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Ingrese_su_usuario">Ingrese su Usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="login">Login</string>
    <string name="ram_ia">RAM IA</string>
    <string name="hoy">Hoy</string>
    <string name="bandeja">Bandeja</string>
    <string name="buscador">Buscador</string>
    <string name="explorador">Explorador</string>
    <string name="mas">+</string>
    <string name="bandeja_de_entrada">Bandeja de Entrada</string>
    <string name="hacer_el_bosquejo_de_ram_ia">Hacer el Bosquejo de RAM-IA</string>
    <string name="quiz_de_m_todos_de_productividad">Quiz de métodos de productividad</string>
    <string name="registrarse">Registrarse</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="olvido_su_contrase_a">Olvido su contraseña</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enviar">Enviar</string>
    <string name="tarea_1">Tarea 1</string>
    <string name="detalles_de_la_tarea">Detalles de la tarea</string>
    <string name="inteligencia_artificial">INTELIGENCIA ARTIFICIAL</string>
    <string name="la_ia_esta_haciendo_su_magia">La IA esta haciendo su magia</string>
    <string name="cargando">Cargando...</string>
    <string name="prioridad_1">Prioridad 1</string>
    <string name="asignada_a_mi">Asignada a mi</string>
    <string name="proximo">Proximo</string>
    <string name="buscar">Buscar</string>
    <string name="guardar_perfil">Guardar Perfil</string>
</resources>